# RTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  calc_strings.py
ECS/: component_array.h  component_manager.cpp  component_manager.h  coordinator.cpp  coordinator.h  entity.h  entity_manager.cpp  entity_manager.h  system_manager.h
Tools/: 2d_functiuon_plotter.py  2d_points.txt  2d_points_plotter.py  3d_points_plotter.py  blender_camera_serialization.py  hdr_generator.py  int_statistics_plotter.py  points.txt  points_on_the_line_plotter.py  points_plotter.py  points_plotter_from_bin.py  vector_plotter.py
Vulkan/: director.cpp  director.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  physical_device.cpp  physical_device.h  vulkan_helpers.cpp  vulkan_helpers.h
math/: maths.cpp  maths.h
resources/: hdr_black_image.exr  hdr_image.exr  palette.exr  test_image.exr  white_furnace.exr
shaders/: accumulate.comp  clear_image.comp  common_defines.h  common_structures.h  compile.ps1  generate_rays.comp  passthrough.frag  passthrough.vert  passthrough_frag.spv  passthrough_vert.spv  raytrace.rchit  raytrace.rgen  raytrace.rmiss  shade.comp  triangle.frag  triangle.vert  triangle_frag.spv  triangle_vert.spv
src/: application.cpp  application.h  camera.cpp  camera.h  controller.cpp  controller.h  executable_task.cpp  executable_task.h  main.cpp  render.cpp  render.h  (+16 more)
src/ECS/: CMakeLists.txt  component_array.h  component_manager.h  coordinator.cpp  coordinator.h  entity.h  entity_manager.cpp  entity_manager.h  system.cpp  system.h  system_manager.h
src/engine/: CMakeLists.txt  controller.cpp  controller.h  executable_task.cpp  executable_task.h  named_resources.h  render.cpp  render.h  renderer_options.cpp  renderer_options.h  task_accumulate.cpp  task_accumulate.h  task_clear_image.cpp  task_clear_image.h  task_generate_initial_rays.cpp  task_generate_initial_rays.h  task_imgui.cpp  task_imgui.h  task_material_sort_clear_materials_count.cpp  task_material_sort_clear_materials_count.h  task_material_sort_clear_materials_count_per_chunk.cpp  task_material_sort_clear_materials_count_per_chunk.h  task_material_sort_clear_total_materials_count.cpp  task_material_sort_clear_total_materials_count.h  task_material_sort_compute_offsets.cpp  task_material_sort_compute_offsets.h  task_material_sort_compute_offsets_per_material.cpp  task_material_sort_compute_offsets_per_material.h  task_material_sort_compute_prefix_sums.cpp  task_material_sort_compute_prefix_sums.h  task_material_sort_compute_prefix_sums_down_sweep.cpp  task_material_sort_compute_prefix_sums_down_sweep.h  task_material_sort_compute_prefix_sums_up_sweep.cpp  task_material_sort_compute_prefix_sums_up_sweep.h  task_material_sort_compute_prefix_sums_zero_out.cpp  task_material_sort_compute_prefix_sums_zero_out.h  task_material_sort_count_materials.cpp  task_material_sort_count_materials.h  task_material_sort_count_materials_per_chunk.cpp  task_material_sort_count_materials_per_chunk.h  (+13 more)
src/engine/components/: acceleration_structure_component.h  device_camera_component.h  device_renderable_component.h  device_transform_component.h  framebuffer_component.h  light_component.h  material_component.h  mesh_component.cpp  mesh_component.h  texture_component.h
src/engine/systems/: acceleration_structure_system.cpp  acceleration_structure_system.h  area_light_system.cpp  area_light_system.h  camera_system.cpp  camera_system.h  directional_light_system.cpp  directional_light_system.h  gpu_bufferable_system.cpp  gpu_bufferable_system.h  light_system.cpp  light_system.h  material_system.cpp  material_system.h  mesh_system.cpp  mesh_system.h  point_light_system.cpp  point_light_system.h  renderable_system.cpp  renderable_system.h  spot_light_system.cpp  spot_light_system.h  texture_system.cpp  texture_system.h  transform_system.cpp  transform_system.h
src/engine/tasks/: executable_task.cpp  executable_task.h  task_accumulate.cpp  task_accumulate.h  task_advance_render_count.cpp  task_advance_render_count.h  task_aov_pass.cpp  task_aov_pass.h  task_clear_buffer.cpp  task_clear_buffer.h  task_clear_image.cpp  task_clear_image.h  task_compute_shading_data.cpp  task_compute_shading_data.h  task_copy_buffer.cpp  task_copy_buffer.h  task_generate_initial_rays.cpp  task_generate_initial_rays.h  task_imgui.cpp  task_imgui.h  task_master_shader.cpp  task_master_shader.h  task_material_sort_clear_materials_count_per_chunk.cpp  task_material_sort_clear_materials_count_per_chunk.h  task_material_sort_clear_total_materials_count.cpp  task_material_sort_clear_total_materials_count.h  task_material_sort_compute_offsets_per_material.cpp  task_material_sort_compute_offsets_per_material.h  task_material_sort_compute_prefix_sums_down_sweep.cpp  task_material_sort_compute_prefix_sums_down_sweep.h  task_material_sort_compute_prefix_sums_up_sweep.cpp  task_material_sort_compute_prefix_sums_up_sweep.h  task_material_sort_compute_prefix_sums_zero_out.cpp  task_material_sort_compute_prefix_sums_zero_out.h  task_material_sort_count_materials_per_chunk.cpp  task_material_sort_count_materials_per_chunk.h  task_material_sort_sort_materials.cpp  task_material_sort_sort_materials.h  task_miss.cpp  task_miss.h  (+20 more)
src/standalone/: CMakeLists.txt  application.cpp  application.h  controller.cpp  controller.h  main.cpp  scene_loader.cpp  scene_loader.h  swapchain.cpp  swapchain.h  task_imgui.cpp  task_imgui.h  utility_functions.cpp  utility_functions.h  window_manager.cpp  window_manager.h
src/vulkan_helpers/: CMakeLists.txt  buffer.cpp  command_buffer_manager.cpp  command_buffer_manager.h  descriptors.cpp  descriptors.h  image.cpp  image.h  renderpass.cpp  resource_allocation.cpp  resource_allocation.h  swapchain.cpp  swapchain.h  texture_manager.cpp  texture_manager.h  timing_manager.cpp  timing_manager.h  vk_acceleration_structure.h  vk_context.cpp  vk_context.h  vk_debug.cpp  vk_debug.h  vk_functions.cpp  vk_functions.h  vk_pipeline.cpp  vk_pipeline.h  vk_shader_compiler.cpp  vk_shader_compiler.h  vk_utils.cpp  vk_utils.h
(+156 files in other folders)
